@@ -64,6 +64,17 @@
         </StackPanel>
       </Button>
 
+      
+      <Button 
+        Command="{Binding Editor.OpenCommand}" 
+        ToolTip="Load an existing XML file to the editor(Ctrl+O)" Focusable="False"
+        >
+        <StackPanel Orientation="Horizontal" Background="Transparent">
+          <Rectangle Width="20" Height="20" Fill="{DynamicResource BlackBrush}" OpacityMask="{DynamicResource OpenIconBrush}"/>
+          <TextBlock Text="open" FontFamily="SegoeUI" FontWeight="Bold" VerticalAlignment="Center" Margin="5,0,0,0" FontSize="14"/>
+        </StackPanel>
+      </Button>
+
 
       <Button 
         Command="{Binding Editor.SaveCommand}" 
@@ -114,6 +125,7 @@
     <KeyBinding Modifiers="Control" Key="F" Command="{Binding FocusOnFindControlCommand, ElementName=ControlRoot}"/>
     <KeyBinding Key="Escape" Command="{Binding ResetFocusCommand, ElementName=ControlRoot}"/>
     <KeyBinding Modifiers="Control" Key="S" Command="{Binding Editor.SaveCommand}"/>
+    <KeyBinding Modifiers="Control" Key="O" Command="{Binding Editor.OpenCommand}"/>
 
     <KeyBinding Modifiers="Alt" Key="D0" Command="{Binding FoldLevelCommand, ElementName=ControlRoot}" CommandParameter="0" />
     <KeyBinding Modifiers="Alt+Shift" Key="D0" Command="{Binding UnFoldLevelCommand, ElementName=ControlRoot}" CommandParameter="0" />
