@@ -92,5 +92,9 @@ Special Thanks
   </Canvas>
   <VisualBrush x:Key="XMLIconBrush" Stretch="Uniform" Visual="{StaticResource XMLIcon}" />
 
+  <Canvas x:Key="OpenIcon" Width="76" Height="76" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+    <Path Width="40" Height="34.8333" Canvas.Left="19" Canvas.Top="24" Stretch="Fill" Fill="{DynamicResource BlackBrush}" Data="F1 M 19,50L 28,34L 63,34L 54,50L 19,50 Z M 19,28.0001L 35,28C 36,25 37.4999,24.0001 37.4999,24.0001L 48.75,24C 49.3023,24 50,24.6977 50,25.25L 50,28L 53.9999,28.0001L 53.9999,32L 27,32L 19,46.4L 19,28.0001 Z "/>
+  </Canvas>
+  <VisualBrush x:Key="OpenIconBrush" Stretch="Uniform" Visual="{StaticResource OpenIcon}" />
 
 </ResourceDictionary>
